[package]
name = "chip_8"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.11"
winit = "0.27"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3