[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0"
pixels = "0.13"
winit = "0.27" # https://github.com/parasyte/pixels/issues/379
opcode_macros = { path = "chip8-macros"}

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false