[package]
name = "opcode_macros"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0", features = ["full"] }
